--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,40 +1,12 @@
-{% load static %}
+{% extends 'blog/base.html' %} {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'css/blog.css' %}" />
-    {% comment %} Google Font {% endcomment %}
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
-      rel="stylesheet"
-    />
-    <title>Post List</title>
-  </head>
-  <body>
-    <header class="page-header">
-      <div class="container">
-        <h1><a href="/">Django Girls Blog</a></h1>
-      </div>
-    </header>
-
-    <main class="container">
-      <div class="row">
-        <div class="col">
-          {% for post in posts %}
-          <article class="post">
-            <time class="date"> {{ post.published_date }} </time>
-            <h2><a href="">{{ post.title }}</a></h2>
-            <p>{{ post.text|linebreaksbr }}</p>
-          </article>
-          <hr />
-          {% endfor %}
-        </div>
-      </div>
-    </main>
-  </body>
+  {% block content %} {% for post in posts %}
+  <article class="post">
+    <time class="date"> {{ post.published_date }} </time>
+    <h2><a href="">{{ post.title }}</a></h2>
+    <p>{{ post.text|linebreaksbr }}</p>
+  </article>
+  <hr />
+  {% endfor %} {% endblock %}
 </html>
