--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,8 +3,13 @@
 <html lang="en">
   {% block content %}
   <article class="post">
+    <aside class="actions">
+      <a class="btn btn-secondary" href="{% url 'post_edit' pk=post.pk %}">
+        {% include './icons/pencil-fill.svg' %}
+      </a>
+    </aside>
     {% if post.published_date %}
-    <time class="date"> {{ post.published_date }}</time>
+    <time class="date"> {{ post.published_date }} </time>
     {% endif %}
     <h2>{{ post.title }}</h2>
     <p>{{ post.text|linebreaksbr }}</p>
